[package]
authors = ["sam aldis <samuel.aldis@owasp.org>"]
edition = "2018"
name = "redteam_toolkit"
version = "0.1.0"

[dependencies]
wasm-bindgen = "*"
js-sys = "*"

[dependencies.web-sys]
version = "0.3.39"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'WebSocket',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
]

[lib]
crate-type = ["cdylib"]
