[package]
authors = ["sam aldis <samuel.aldis@owasp.org>"]
edition = "2018"
name = "server"
version = "0.1.0"
[dependencies]
js-sys = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
yew = "*"

[dependencies.web-sys]
features = ["Document", "Element", "HtmlElement", "Node", "Window", "EventListener"]
version = "0.3.4"

[lib]
crate-type = ["cdylib", "rlib"]