[package]
authors = ["sam aldis <samuel.aldis@owasp.org>"]
edition = "2018"
name = "server"
version = "0.1.0"
[dependencies]
wasm-bindgen = "*"
js-sys = "*"
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'EventListener',
]

[lib]
crate-type = ["cdylib", "rlib"]